api-reference/rest-apis/v2/users/add-users.mdx
---
title: "Add Users"
description: "Add users to an organization, document, or folder in a Velt workspace using the v2 REST API, including user IDs, names, and custom metadata."
api: "POST https://api.velt.dev/v2/users/add"
---

Use this API to add Users to:
1. **Organization:** This will provide them access to all the documents in the organization unless the document has `restricted` access type. It will also show users in the contact list of the organization.
2. **Folder:** This will provide them access to all the documents in the folder. If you pass the `folderId`, then the users will be added to the folder and not the organization.
3. **Document:** This will provide them access to the specified document. It will also show users in the contact list of the document. If you pass the `documentId`, then the users will be added to the document and not the organization or folder.

<Info>
- If organization does not exist, it will be created.
- If you provide documentId or folderId, then the users will only be added at that level and not at the organization level. To also add users at the organization level, you will need to call this API again with only the organizationId.
- If User's `initial` is not provided in the User object, then it will be automatically created using the name field.
</Info>

<Info>
**Access Control**
- Set `accessRole` to `viewer` (read-only) or `editor` (read/write) on each resource to define the user's capabilities for that resource.
- `accessRole` can only be set via the v2 Users and Auth Permissions REST APIs. Frontend SDK methods do not accept or change `accessRole`.
- Relevant endpoints: `/v2/users/add`, `/v2/users/update`, `/v2/auth/permissions/add`, `/v2/auth/generate_token`.
- See the [Access Control overview](/key-concepts/overview#access-control) for concepts and detailed guidance.
</Info>

<Note>
See the [Access Control overview](/key-concepts/overview#access-control) for concepts and detailed guidance.
</Note>

# Endpoint
`POST https://api.velt.dev/v2/users/add`

# Headers
<ParamField header="x-velt-api-key" type="string" required>
  Your API key.
</ParamField>

<ParamField header="x-velt-auth-token" type="string" required>
  Your [Auth Token](/security/auth-tokens).
</ParamField>

# Body

#### Params

<ParamField body="data" type="object" required>
  <Expandable title="properties">
    <ParamField body="organizationId" type="string" required>
      Organization ID
    </ParamField>

    <ParamField body="createOrganization" type="boolean">
      If set to true, a new organization will be created (if it doesn't exist) before users are added.
    </ParamField>

    <ParamField body="documentId" type="string">
      Document ID. Provide this if you want to add users to a specific document.
    </ParamField>

    <ParamField body="createDocument" type="boolean">
      If set to true and `documentId` is provided but doesn't exist, a new document will be created before users are added.
    </ParamField>

    <ParamField body="folderId" type="string">
      Folder ID. Provide this if you want to add users to a specific folder. Either provide `documentId` or `folderId`.
    </ParamField>

    <ParamField body="createFolder" type="boolean">
      If set to true and `folderId` is provided but doesn't exist, a new folder will be created before users are added.
    </ParamField>


    <ParamField body="users" type="User[]" required>
      Array of [User](/api-reference/sdk/models/data-models#user) objects.
    </ParamField>
  </Expandable>
</ParamField>

## **Example Requests**

#### 1. Add users to a specific organization

<Tabs>
<Tab title="Editor">

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "users": [
      {
        "userId": "yourUserId1",
        "name": "User Name",
        "email": "user@email.com",
        "accessRole": "editor"
      }
    ]
  }
}
```

</Tab>
<Tab title="Viewer">

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "users": [
      {
        "userId": "yourUserId1",
        "name": "User Name",
        "email": "user@email.com",
        "accessRole": "viewer"
      }
    ]
  }
}
```

</Tab>
</Tabs>

#### 2. Add users to a specific document within an organization

<Tabs>
<Tab title="Editor">

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "users": [
      {
        "userId": "yourUserId1",
        "name": "User Name",
        "email": "user@email.com",
        "accessRole": "editor"
      }
    ]
  }
}
```

</Tab>
<Tab title="Viewer">

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "users": [
      {
        "userId": "yourUserId1",
        "name": "User Name",
        "email": "user@email.com",
        "accessRole": "viewer"
      }
    ]
  }
}
```

</Tab>
</Tabs>

#### 3. Add users to a specific folder within an organization

<Tabs>
<Tab title="Editor">

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "folderId": "yourFolderId",
    "users": [
      {
        "userId": "yourUserId1",
        "name": "User Name",
        "email": "user@email.com",
        "accessRole": "editor"
      }
    ]
  }
}
```

</Tab>
<Tab title="Viewer">

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "folderId": "yourFolderId",
    "users": [
      {
        "userId": "yourUserId1",
        "name": "User Name",
        "email": "user@email.com",
        "accessRole": "viewer"
      }
    ]
  }
}
```

</Tab>
</Tabs>

# Response

#### Success Response

```JSON
{
  "result": {
    "status": "success",
    "message": "User(s) processed successfully.",
    "data": {
      "yourUserId1": {
        "success": true,
        "id": "4c250058149d6c9fb8c894c9ef29c790",
        "message": "User added."
      }
    }
  }
}
```

#### Failure Response

```JSON
{
  "error": {
    "message": "ERROR_MESSAGE",
    "status": "INVALID_ARGUMENT"
  }
}
```

<ResponseExample>
```js
{
  "result": {
    "status": "success",
    "message": "User(s) processed successfully.",
    "data": {
      "yourUserId1": {
        "success": true,
        "id": "4c250058149d6c9fb8c894c9ef29c790",
        "message": "User added."
      }
    }
  }
}
```
</ResponseExample>